<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <br.com.sondasd.buttons.SondaButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sonda_margin_xxs"
            style="@style/Sonda.Button.Primary"
            android:text="@string/primary_button"/>

        <br.com.sondasd.buttons.SondaButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Sonda.Button.Secondary"
            android:layout_margin="@dimen/sonda_margin_xxs"
            android:text="@string/secondary_button"/>

        <br.com.sondasd.buttons.SondaButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Sonda.Button.Blocked"
            android:layout_margin="@dimen/sonda_margin_xxs"
            android:text="@string/blocked_button"/>

        <br.com.sondasd.buttons.SondaButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sonda_margin_xxs"
            app:icon="@drawable/ic_like"
            style="@style/Sonda.Button.Primary"
            android:text="@string/primary_icon_button"/>

        <br.com.sondasd.buttons.SondaButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sonda_margin_xxs"
            app:icon="@drawable/ic_like"
            style="@style/Sonda.Button.Secondary"
            android:text="@string/secondary_icon_button"/>

        <br.com.sondasd.buttons.SondaButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sonda_margin_xxs"
            app:icon="@drawable/ic_like"
            style="@style/Sonda.Button.Blocked"
            android:text="@string/blocked_icon_button"/>

        <br.com.sondasd.buttons.SondaLoadingButton
            android:id="@+id/loading_primary_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sonda_margin_xxs"
            style="@style/Sonda.Button.Primary"
            android:text="@string/primary_loading_button"/>

        <br.com.sondasd.buttons.SondaLoadingButton
            android:id="@+id/loading_secondary_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sonda_margin_xxs"
            style="@style/Sonda.Button.Secondary"
            android:text="@string/secondary_loading_button"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>